# MeshMemoryClientAPI

./: CMakeLists.txt  main.cpp
Mesh  Mem  Client/: Client.cpp  Client.h  tcpClient.cpp  tcpClient.h  tcpServer.cpp  tcpServer.h
Mesh Mem API/: API.cpp  API.h  HexConverter.cpp  HexConverter.h  Token.cpp  Token.h  UUID.cpp  UUID.h  base64.cpp  base64.h  xReference.cpp  xReference.h  xType.cpp  xType.h
